--- a/form.html
+++ b/form.html
@@ -21,6 +21,8 @@
 
         <label for="">Ton Message:</label><br>
         <textarea name="Name" id="" cols="40" rows="30"></textarea>
+        <input type="submit" name="Valier">
+        <input type="reset" name="Réinitialiser">
     </fieldset>
 
     &copy; 2020_Naime Ismail
