--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
 
         <label for="">Ton Message:</label><br>
         <textarea name="Name" id="" cols="40" rows="30"></textarea>
-        <input type="submit" name="Valier">
+        <input type="submit" name="Valider">
         <input type="reset" name="Réinitialiser">
     </fieldset>
 
