--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
         <input type="email"><br><br>
 
         <label for="">Ton Message:</label><br>
-        <textarea name="Name" id="" cols="40" rows="30"></textarea>
+        <textarea name="Name" id="" cols="40" rows="30"></textarea><br>
         <input type="submit" name="Valider">
         <input type="reset" name="Réinitialiser">
     </fieldset>
